<resources>
    <string name="app_name">activity_scrolling</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
  <string name="descripcion_boton"> Agregar </string>
    <string name="action_settings">Settings</string>
    <string name="descripcion">Añadir a Paquito al grupo de sd,kfgjaljkhgbalbhla.kb </string>
    <string name="Películas"> Lista Películas</string>
    <string name="Piratas">Piratas del Caribe</string>
    <string name="Descripcion">Piratas del Caribe (en inglés, Pirates of the Caribbean) es el título de una franquicia cinematográfica de aventura fantástica y piratas, La saga Piratas del Caribe cuenta con cinco películas estrenadas y una sexta en producción.</string>
    <string name="large_text"></string>
    <string name="InsideOut"> Insoide Out 2</string>
    <string name="insideDescripcion">Inside Out 2 (Película animada estadounidense producida por Pixar Animation Studios y Point Grey Pictures para Walt Disney Pictures. Es la secuela de Inside Out (2015). </string>
    <string name="imagen3">El Gato con Botas 2 </string>
    <string name="Descripcion3">Es una película de comedia de aventuras animada por computadora producida por DreamWorks Animation y distribuida por Universal Pictures</string>
    <string name="imagen4">La Princesa Mononoke</string>
    <string name="Descripcion4">es una película de animación japonesa escrita y dirigida por Hayao Miyazaki, estrenada en 1997.2</string>
    <string name="wiki">Ver en Wikipedia</string>
  <string name="agregar">+</string>
</resources>